updates to figure 3

--- a/figure_scripts/figure_3/figure_3.rmd
+++ b/figure_scripts/figure_3/figure_3.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Figure 3"
-output: html_document
+output: rmarkdown::github_document
 ---
 
 ```{r message=FALSE}
@@ -89,6 +89,9 @@ def _collect_samples(W, resolution, n_cells, resamp_size, true_class, random_sta
 
 ```
 
+The code to perform this clustering stability is commented out due to the length of time it takes to run, but the
+function is above.  Below I read in the results and plot them.
+
 ```{python, rand_plot}
 
 import matplotlib.pyplot as plt
@@ -105,21 +108,21 @@ epithelial_harmonized = pg.read_input("/home/nealpsmith/projects/medoff/data/ann
 # plot_df = plot_df.reset_index()
 # plot_df = plot_df.melt(id_vars="index")
 # plot_df.to_csv(os.path.join(file_path(), "data", "ari_plots", "epithelial_harmonized_ARI.csv"))
-plot_df = pd.read_csv("/home/nealpsmith/projects/medoff/data/ari_plots/epithelial_harmonized_ARI.csv")
-print(plot_df)
-# fig, ax = plt.subplots(1)
-# _ = sns.boxplot(x="index", y="value", data=plot_df, ax = ax)
-# for box in ax.artists:
-#     box.set_facecolor("grey")
+plot_df = pd.read_csv("/home/nealpsmith/projects/medoff/data/ari_plots/epithelial_harmonized_ARI.csv", index_col=0)
+fig, ax = plt.subplots(1)
+_ = sns.boxplot(x="index", y="value", data=plot_df, ax = ax)
+for box in ax.artists:
+    box.set_facecolor("grey")
 # ax.artists[6].set_facecolor("red") # The one we chose!
-# ax.spines['right'].set_visible(False)
-# ax.spines['top'].set_visible(False)
-# ax.tick_params(axis='both', which='major', labelsize=15)
-# _ = ax.set_ylabel("Adjusted Rand index", size = 20)
-# _ = ax.set_xlabel("leiden resolution", size = 20)
-# _ = plt.axhline(y = 0.9, color = "black", linestyle = "--")
-# fig.tight_layout()
-# fig
+ax.spines['right'].set_visible(False)
+ax.spines['top'].set_visible(False)
+ax.tick_params(axis='both', which='major', labelsize=15)
+_ = ax.set_ylabel("Adjusted Rand index", size = 20)
+_ = ax.set_xlabel("leiden resolution", size = 20)
+_ = plt.axhline(y = 0.9, color = "black", linestyle = "--")
+fig.tight_layout()
+fig
+
 ```
 
 Based on this rand index approach, we can see that a leiden resolution of 1.5 is the highest resolution where the
@@ -142,7 +145,7 @@ these cells to be their own cluster.  We can see this small cluster of cells by 
 PRR4.
 
 ```{python serous_markers}
-# sc.pl.umap(epithelial_harmonized, color = ["AZGP1", "PRR4"], cmap = colormap)
+sc.pl.umap(epithelial_harmonized, color = ["AZGP1", "PRR4"], cmap = colormap)
 ```
 
 We segregated these cells out by thier UMAP coordinates.  Below is the new
@@ -188,30 +191,32 @@ sc.pl.umap(epithelial_harmonized, color = "new_clusters", legend_loc = "on data"
 
 First we can look at marker genes by AUROC.  The motivation here is to determine for each cluster which specific genes
 are good classifiers for cluster membership.  These stats were calculated using the Pegasus ```de_analysis``` function.
+The DE analysis function is commented out due to the time it takes to run.  Results are already in the data object.  We
+are showing the function for transparency.
 
 
 ```{python DE_analysis}
 # pg.de_analysis(epithelial_harmonized, cluster = "new_clusters", auc = True,
 #                n_jobs = len(set(epithelial_harmonized.obs["new_clusters"])), result_key="de_res_new")
 
-# top_auc = {}
-# top_genes = {}
-# for clust in sorted(set(epithelial_harmonized.obs["new_clusters"]), key = int) :
-#     df_dict = {"auc": epithelial_harmonized.varm["de_res_new"]["auroc:{clust}".format(clust=clust)]}
-#     df = pd.DataFrame(df_dict, index=epithelial_harmonized.var.index)
-#     df = df.sort_values(by=["auc"], ascending=False)
-#     auc_df = df.iloc[0:50]
-#     genes = auc_df[auc_df["auc"] >= 0.75].index.values
-#     top_genes[clust] = genes
-#
-# top_gene_df = pd.DataFrame(dict([(k,pd.Series(v)) for k,v in top_genes.items() ]))
-# top_gene_df = top_gene_df.rename(columns = {clust : "cluster_{clust}".format(clust=clust) for clust in top_genes.keys()})
-# top_gene_df = top_gene_df.replace(np.nan, "")
+top_auc = {}
+top_genes = {}
+for clust in sorted(set(epithelial_harmonized.obs["new_clusters"]), key = int) :
+    df_dict = {"auc": epithelial_harmonized.varm["de_res_new"]["auroc:{clust}".format(clust=clust)]}
+    df = pd.DataFrame(df_dict, index=epithelial_harmonized.var.index)
+    df = df.sort_values(by=["auc"], ascending=False)
+    auc_df = df.iloc[0:50]
+    genes = auc_df[auc_df["auc"] >= 0.75].index.values
+    top_genes[clust] = genes
+
+top_gene_df = pd.DataFrame(dict([(k,pd.Series(v)) for k,v in top_genes.items() ]))
+top_gene_df = top_gene_df.rename(columns = {clust : "cluster_{clust}".format(clust=clust) for clust in top_genes.keys()})
+top_gene_df = top_gene_df.replace(np.nan, "")
 ```
 
 ```{r show_auc}
-# library(knitr)
-# kable(reticulate::py$top_gene_df, caption = "genes with AUC > 0.75")
+library(knitr)
+kable(reticulate::py$top_gene_df, caption = "genes with AUC > 0.75")
 ```
 
 We can see from the above AUROC genes, that we don't have a strong enough signal from some clusters to get a good sense
@@ -219,7 +224,9 @@ of their phenotype solely on that.  So we can also find markers using an OVA pse
 created a psedudobulk matrix by summing the UMI counts across cells for each unique cluster/sample combination, creating
 a matrix of n genes x (n samples * n clusters).  Using this matrix with DESeq2, For each cluster, we used an input model
 gene ~ in_clust where in_clust is a factor with two levels indicating if the sample was in or not in the cluster being
-tested. Genes with an FDR < 5% were considered marker genes.
+tested. Genes with an FDR < 5% were considered marker genes.  The DESEq2 code is commented out due to the length of time
+it takes to run.  The function is an rpy2 implementation of DESeq2.  This can be found here :
+https://github.com/nealpsmith/neals_python_functions/blob/master/neals_python_functions/analysis/deseq2.py
 
 ```{python pseudobulk}
 # import neals_python_functions as nealsucks
@@ -315,7 +322,7 @@ top_gene_df = top_gene_df.replace(np.nan, "")
 ```
 
 ```{r, show_auc_and_pseudo}
-# kable(reticulate::py$top_gene_df, caption = "genes with AUC> 0.75 or pseudo q < 0.05")
+kable(reticulate::py$top_gene_df, caption = "genes with AUC> 0.75 or pseudo q < 0.05")
 ```
 
 
@@ -686,117 +693,118 @@ When we compare the number of DEGs from Pre:Ag between AA and AC, we see that AA
 epithelial cells change much more when exposed to allergen in AA than AC.
 
 ```{r deseq2_res, warning = FALSE, message = FALSE}
+
 library(DESeq2)
-# library(glue)
-# library(tidyverse)
-#
-# count_mtx <- as.matrix(read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_epithelial_harmonized_counts_for_github.csv",
-#                                 row.names = 1))
-# meta_data <- read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_epithelial_harmonized_meta_for_github.csv", row.names = 1)
-# meta_data$phenotype <- factor(meta_data$phenotype, levels = c("ANA", "AA"))
-#
-# de_list <- list()
-# for (clust in unique(meta_data$cluster)){
-#   clust_meta <-meta_data[meta_data$cluster == clust,]
-#   clust_count <- count_mtx[,rownames(clust_meta)]
-#
-#   # Lets do a comparison of groups at Pre and Ag
-#   pheno_list <- list()
-#   for (pheno in c("AA", "ANA")){
-#
-#     # Get just the samples from that phenotype and only pre and Ag
-#     meta_temp <- clust_meta[clust_meta$phenotype ==pheno & clust_meta$sample %in% c("Pre", "Ag"),]
-#     meta_temp$sample <- factor(meta_temp$sample, levels = c("Pre", "Ag"))
-#
-#     if(nrow(meta_temp) > 5){
-#       count_temp <- clust_count[,rownames(meta_temp)]
-#
-#       n_samp <- rowSums(count_temp != 0)
-#       count_temp <- count_temp[n_samp > round(nrow(meta_temp) / 2),]
-#
-#       stopifnot(rownames(meta_temp) == colnames(count_temp))
-#       dds <- DESeqDataSetFromMatrix(countData = count_temp,
-#                                     colData = meta_temp,
-#                                     design = ~sample)
-#
-#       dds <- DESeq(dds)
-#       res <- results(dds)
-#       plot_data <- as.data.frame(res)
-#       plot_data <- plot_data[!is.na(plot_data$padj),]
-#       plot_data$gene <- rownames(plot_data)
-#       n_de <- nrow(plot_data[plot_data$padj < 0.1,])
-#       pheno_list[[pheno]] <- n_de
-#     } else {
-#       pheno_list[[pheno]] <- 0
-#     }
-#
-#   }
-#   df <- as.data.frame(pheno_list)
-#   df$new_clusters <- clust
-#   de_list[[clust]] <- df
-#
-# }
-#
-# de_counts <- do.call(rbind, de_list)
-#
-# de_counts <- de_counts[order(rowSums(de_counts), decreasing = FALSE),]
-#
-# de_counts$new_clusters <- factor(rownames(de_counts), levels = rownames(de_counts))
-# plot_df <- reshape2::melt(de_counts, id.vars = "new_clusters") %>%
-#   mutate(value = ifelse(variable == "ANA", -value, value))
-#
-# ggplot(plot_df, aes(x = new_clusters, y = value, group = variable, fill = variable)) +
-#   geom_bar(stat = "identity") + coord_flip() +
-#   scale_fill_manual(values = c("#FF8000", "#40007F")) +
-#   scale_y_continuous(labels = abs) +
-#   ggtitle(glue("Number of DE genes at Ag")) +
-#   ylab("# of DE genes") + xlab("") +
-#   theme_bw(base_size = 20)
+library(glue)
+library(tidyverse)
+
+count_mtx <- as.matrix(read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_epithelial_harmonized_counts_for_github.csv",
+                                row.names = 1))
+meta_data <- read.csv("/home/nealpsmith/projects/medoff/data/pseudobulk_epithelial_harmonized_meta_for_github.csv", row.names = 1)
+meta_data$phenotype <- factor(meta_data$phenotype, levels = c("ANA", "AA"))
+
+de_list <- list()
+for (clust in unique(meta_data$cluster)){
+  clust_meta <-meta_data[meta_data$cluster == clust,]
+  clust_count <- count_mtx[,rownames(clust_meta)]
+
+  # Lets do a comparison of groups at Pre and Ag
+  pheno_list <- list()
+  for (pheno in c("AA", "ANA")){
+
+    # Get just the samples from that phenotype and only pre and Ag
+    meta_temp <- clust_meta[clust_meta$phenotype ==pheno & clust_meta$sample %in% c("Pre", "Ag"),]
+    meta_temp$sample <- factor(meta_temp$sample, levels = c("Pre", "Ag"))
+
+    if(nrow(meta_temp) > 5){
+      count_temp <- clust_count[,rownames(meta_temp)]
+
+      n_samp <- rowSums(count_temp != 0)
+      count_temp <- count_temp[n_samp > round(nrow(meta_temp) / 2),]
+
+      stopifnot(rownames(meta_temp) == colnames(count_temp))
+      dds <- DESeqDataSetFromMatrix(countData = count_temp,
+                                    colData = meta_temp,
+                                    design = ~sample)
+
+      dds <- DESeq(dds)
+      res <- results(dds)
+      plot_data <- as.data.frame(res)
+      plot_data <- plot_data[!is.na(plot_data$padj),]
+      plot_data$gene <- rownames(plot_data)
+      n_de <- nrow(plot_data[plot_data$padj < 0.1,])
+      pheno_list[[pheno]] <- n_de
+    } else {
+      pheno_list[[pheno]] <- 0
+    }
+
+  }
+  df <- as.data.frame(pheno_list)
+  df$new_clusters <- clust
+  de_list[[clust]] <- df
+
+}
+
+de_counts <- do.call(rbind, de_list)
+
+de_counts <- de_counts[order(rowSums(de_counts), decreasing = FALSE),]
+
+de_counts$new_clusters <- factor(rownames(de_counts), levels = rownames(de_counts))
+plot_df <- reshape2::melt(de_counts, id.vars = "new_clusters") %>%
+  mutate(value = ifelse(variable == "ANA", -value, value))
+
+ggplot(plot_df, aes(x = new_clusters, y = value, group = variable, fill = variable)) +
+  geom_bar(stat = "identity") + coord_flip() +
+  scale_fill_manual(values = c("#FF8000", "#40007F")) +
+  scale_y_continuous(labels = abs) +
+  ggtitle(glue("Number of DE genes Pre vs. Ag")) +
+  ylab("# of DE genes") + xlab("") +
+  theme_bw(base_size = 20)
 
 ```
 
 We can also look at this in UMAP space.
 
 ```{python cell_info}
-# cell_info = epithelial_harmonized.obs
-# cell_info["umap_1"] = epithelial_harmonized.obsm["X_umap"][:,0]
-# cell_info["umap_2"] = epithelial_harmonized.obsm["X_umap"][:,1]
+cell_info = epithelial_harmonized.obs
+cell_info["umap_1"] = epithelial_harmonized.obsm["X_umap"][:,0]
+cell_info["umap_2"] = epithelial_harmonized.obsm["X_umap"][:,1]
 
 ```
 
 ```{r umap, fig.width = 12, fig.height = 4}
-# library(ggpubr)
-#
-# umap_info <- reticulate::py$cell_info
-# umap_info$new_clusters <- factor(umap_info$new_clusters)
-#
-#
-# plot_df <- umap_info %>%
-#   dplyr::select(umap_1, umap_2, phenotype, new_clusters) %>%
-#   left_join(de_counts, by = "new_clusters")
-#
-# aa_plot <- ggplot(plot_df[plot_df$phenotype == "AA",], aes(x = umap_1, y = umap_2, color = AA)) +
-#   geom_point(size = 0.5) +
-#   scale_color_gradient(low="#d3d3d3", high="#FF8000", limits = c(0, max(plot_df$AA))) +
-#   # ggtitle(glue("# of DE genes Pre vs Ag")) +
-#   theme_classic(base_size = 20) +
-#   theme(axis.text.x=element_blank(),
-#         axis.ticks.x=element_blank(),
-#         axis.text.y=element_blank(),
-#         axis.ticks.y=element_blank())
-#
-# ana_plot <- ggplot(plot_df[plot_df$phenotype == "ANA",], aes(x = umap_1, y = umap_2, color = ANA)) +
-#   geom_point(size = 0.5) +
-#   scale_color_gradient(low="#d3d3d3", high="#40007F", limits = c(0, max(plot_df$AA))) +
-#   # ggtitle(glue("# of DE genes Pre vs Ag")) +
-#   theme_classic(base_size = 20) +
-#   theme(axis.text.x=element_blank(),
-#         axis.ticks.x=element_blank(),
-#         axis.text.y=element_blank(),
-#         axis.ticks.y=element_blank())
-#
-# all_plots <- ggarrange(plotlist = list("AA" = aa_plot, "ANA" = ana_plot), nrow = 1, widths = c(3,3), heights = c(4))
-# all_plots
+library(ggpubr)
+
+umap_info <- reticulate::py$cell_info
+umap_info$new_clusters <- factor(umap_info$new_clusters)
+
+
+plot_df <- umap_info %>%
+  dplyr::select(umap_1, umap_2, phenotype, new_clusters) %>%
+  left_join(de_counts, by = "new_clusters")
+
+aa_plot <- ggplot(plot_df[plot_df$phenotype == "AA",], aes(x = umap_1, y = umap_2, color = AA)) +
+  geom_point(size = 0.5) +
+  scale_color_gradient(low="#d3d3d3", high="#FF8000", limits = c(0, max(plot_df$AA))) +
+  # ggtitle(glue("# of DE genes Pre vs Ag")) +
+  theme_classic(base_size = 20) +
+  theme(axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+
+ana_plot <- ggplot(plot_df[plot_df$phenotype == "ANA",], aes(x = umap_1, y = umap_2, color = ANA)) +
+  geom_point(size = 0.5) +
+  scale_color_gradient(low="#d3d3d3", high="#40007F", limits = c(0, max(plot_df$AA))) +
+  # ggtitle(glue("# of DE genes Pre vs Ag")) +
+  theme_classic(base_size = 20) +
+  theme(axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.ticks.y=element_blank())
+
+all_plots <- ggarrange(plotlist = list("AA" = aa_plot, "ANA" = ana_plot), nrow = 1, widths = c(3,3), heights = c(4))
+all_plots
 ```
 
 Next, we wanted to look for genes that were significant with an interaction between the phenotype (AA vs. AC) and
@@ -806,64 +814,64 @@ levels of phenotype and sample to create a new factor called "interaction".  We 
 
 ```{r deg_interaction, warning = FALSE, message = FALSE}
 
-#Limit to just Ag samples
-# meta_data <- meta_data[meta_data$sample != "Dil",]
-# count_mtx <- count_mtx[,rownames(meta_data)]
-#
-# de_list <- list()
-# for (clust in unique(meta_data$cluster)){
-#   clust_meta <-meta_data[meta_data$cluster == clust,]
-#   clust_meta$sample <- factor(clust_meta$sample, levels = c("Pre", "Ag"))
-#   clust_meta$phenotype <- factor(clust_meta$phenotype, levels = c("ANA", "AA"))
-#   clust_meta$interaction <- factor(paste(clust_meta$phenotype, clust_meta$sample, sep = "_"),
-#                                   levels = c("ANA_Pre", "ANA_Ag", "AA_Pre", "AA_Ag"))
-#
-#   clust_count <- count_mtx[,rownames(clust_meta)]
-#     if (nrow(clust_meta) > 5){
-#
-#       n_samp <- rowSums(clust_count != 0)
-#       clust_count <- clust_count[n_samp > round(nrow(clust_meta) / 2),]
-#
-#       stopifnot(rownames(clust_meta) == colnames(clust_count))
-#
-#       dds <- DESeqDataSetFromMatrix(countData = clust_count,
-#                                     colData = clust_meta,
-#                                     design = ~interaction)
-#       dds <- DESeq(dds, test = "LRT", reduced = ~1)
-#       res <- results(dds, contrast = c("interaction", "AA_Ag",  "ANA_Ag"))
-#       plot_data <- as.data.frame(res)
-#       plot_data <- plot_data[!is.na(plot_data$padj),]
-#       plot_data$gene <- rownames(plot_data)
-#       de_list[[glue("cluster_{clust}")]] <- plot_data
-#     }
-#
-# }
-#
-# de_counts <- lapply(seq_along(de_list), function(x){
-#     data <- de_list[[x]]
-#     up_aa <- nrow(data[data$padj < 0.1 & data$log2FoldChange > 0,])
-#     up_ana <- nrow(data[data$padj < 0.1 & data$log2FoldChange < 0,])
-#     info_df <- data.frame("AA" = up_aa,
-#                           "ANA" = up_ana, row.names = names(de_list[x]))
-#     return(info_df)
-#   }) %>%
-#     do.call(rbind, .)
-#
-# de_counts <- de_counts[order(rowSums(de_counts), decreasing = FALSE),]
-#
-# de_counts$cluster <- factor(rownames(de_counts), levels = rownames(de_counts))
-# plot_df <- reshape2::melt(de_counts, id.vars = "cluster") %>%
-#   mutate(value = ifelse(variable == "ANA", -value, value))
-#
-#
-# ggplot(plot_df, aes(x = cluster, y = value, group = variable, fill = variable)) +
-#   geom_bar(stat = "identity") + coord_flip() +
-#   scale_fill_manual(values = c("#FF8000", "#40007F")) +
-#   scale_y_continuous(labels = abs) +
-#   ggtitle(glue("Number of DE genes at Ag")) +
-#   ylab("# of DE genes") + xlab("") +
-#   theme_bw(base_size = 20)
-#
+#Limit to just Ag/pre samples
+meta_data <- meta_data[meta_data$sample != "Dil",]
+count_mtx <- count_mtx[,rownames(meta_data)]
+
+de_list <- list()
+for (clust in unique(meta_data$cluster)){
+  clust_meta <-meta_data[meta_data$cluster == clust,]
+  clust_meta$sample <- factor(clust_meta$sample, levels = c("Pre", "Ag"))
+  clust_meta$phenotype <- factor(clust_meta$phenotype, levels = c("ANA", "AA"))
+  clust_meta$interaction <- factor(paste(clust_meta$phenotype, clust_meta$sample, sep = "_"),
+                                  levels = c("ANA_Pre", "ANA_Ag", "AA_Pre", "AA_Ag"))
+
+  clust_count <- count_mtx[,rownames(clust_meta)]
+    if (nrow(clust_meta) > 5){
+
+      n_samp <- rowSums(clust_count != 0)
+      clust_count <- clust_count[n_samp > round(nrow(clust_meta) / 2),]
+
+      stopifnot(rownames(clust_meta) == colnames(clust_count))
+
+      dds <- DESeqDataSetFromMatrix(countData = clust_count,
+                                    colData = clust_meta,
+                                    design = ~interaction)
+      dds <- DESeq(dds, test = "LRT", reduced = ~1)
+      res <- results(dds, contrast = c("interaction", "AA_Ag",  "ANA_Ag"))
+      plot_data <- as.data.frame(res)
+      plot_data <- plot_data[!is.na(plot_data$padj),]
+      plot_data$gene <- rownames(plot_data)
+      de_list[[glue("cluster_{clust}")]] <- plot_data
+    }
+
+}
+
+de_counts <- lapply(seq_along(de_list), function(x){
+    data <- de_list[[x]]
+    up_aa <- nrow(data[data$padj < 0.1 & data$log2FoldChange > 0,])
+    up_ana <- nrow(data[data$padj < 0.1 & data$log2FoldChange < 0,])
+    info_df <- data.frame("AA" = up_aa,
+                          "ANA" = up_ana, row.names = names(de_list[x]))
+    return(info_df)
+  }) %>%
+    do.call(rbind, .)
+
+de_counts <- de_counts[order(rowSums(de_counts), decreasing = FALSE),]
+
+de_counts$cluster <- factor(rownames(de_counts), levels = rownames(de_counts))
+plot_df <- reshape2::melt(de_counts, id.vars = "cluster") %>%
+  mutate(value = ifelse(variable == "ANA", -value, value))
+
+
+ggplot(plot_df, aes(x = cluster, y = value, group = variable, fill = variable)) +
+  geom_bar(stat = "identity") + coord_flip() +
+  scale_fill_manual(values = c("#FF8000", "#40007F")) +
+  scale_y_continuous(labels = abs) +
+  ggtitle(glue("Number of DE genes at Ag")) +
+  ylab("# of DE genes") + xlab("") +
+  theme_bw(base_size = 20)
+
 
 ```
 
@@ -873,86 +881,86 @@ results.  Below, we highlight genes involved in immune response, tissue remodell
 metabolism.
 
 ```{r deg_heatmaps, fig.width = 3, fig.height = 3}
-# gene_lists <- list("immune_mediators" = c("CCL26", "IL1R2", "HRH1", "IL13RA1", "CX3CL1", "CXCL6", "IL33",
-#                                           "HMGB1", "HMGB2", "S100A8", "LGALS3", "MIF", "CST1", "ANXA3",
-#                                           "CXCL2", "CXCL8"),
-#                    "tissue_remodelling" = c("MMP13", "MMP1", "LOXL4", "MMP7", "LOXL1", "VEGFA", "EGFR", "VCAN",
-#                                             "ANGPT1", "SPDEF", "SCIN", "HAS3", "POSTN"),
-#                    "barrier_function" = c("SCGB1A1", "TFF3", "SCGB2A1", "SCGB3A1", "SLC26A4", "CDH26", "ANO1", "CA2",
-#                                           "GCNT4", "GALNT10", "CLCA2", "PCDH17", "OCLN", "CLDN8"),
-#                    "metabolism" = c("IDO1", "SLC16A1", "SLC16A7", "ARG2", "GLUL", "TXN", "MAOA", "LTC4S",
-#                                     "GSTA1", "GSTA2", "GSTA4", "SOD3", "PYCR1")
-#                    )
-#
-# plot_clusts <- c("cluster_8", "cluster_7", "cluster_13", "cluster_12", "cluster_11")
-#
-# for (gset in names(gene_lists)) {
-#   # Get the log-FC values for each gene in each cluster
-#   fc_vals <- lapply(gene_lists[[gset]], function(gene){
-#     log_fc_vals <- lapply(de_list, function(df){
-#       return(df[gene, "log2FoldChange"])
-#     }) %>%
-#       as.data.frame(., row.names = gene) %>%
-#       t() %>%
-#       as.data.frame() %>%
-#       rownames_to_column(var = "cluster")
-#     return(log_fc_vals)
-#   }) %>%
-#     purrr::reduce(left_join, by= "cluster") %>%
-#     column_to_rownames(var = "cluster") %>%
-#     t() %>%
-#     replace_na(0)
-#   p_vals <- lapply(gene_lists[[gset]], function(gene){
-#     log_fc_vals <- lapply(de_list, function(df){
-#       return(df[gene, "padj"])
-#     }) %>%
-#       as.data.frame(., row.names = gene) %>%
-#       t() %>%
-#       as.data.frame() %>%
-#       rownames_to_column(var = "cluster")
-#     return(log_fc_vals)
-#   }) %>%
-#     purrr::reduce(left_join, by= "cluster") %>%
-#     column_to_rownames(var = "cluster") %>%
-#     t() %>%
-#     replace_na(1)
-#
-#   # Remove clusters that we do not need
-#   fc_vals <- fc_vals[,plot_clusts]
-#   p_vals <- p_vals[,plot_clusts]
-#
-#   # make a list for cluster colors
-#   clust_cols <-list("clust" = c("cluster_8" = "#279e68",
-#                                 "cluster_7" = "#aa40fc",
-#                                 "cluster_13" = "#e377c2",
-#                                 "cluster_12" = "#1f77b4",
-#                                 "cluster_11" = "#d62728"))
-#
-#   clust_annotation <- HeatmapAnnotation("names" =  anno_mark(at = 1:ncol(fc_vals),
-#                                                              labels = sapply(colnames(fc_vals), function(x) strsplit(x, "_")[[1]][2]),
-#                                                              which = "column", side = "top", labels_rot = 360, link_height = unit(2.5, "mm")),
-#                                         "clust" = colnames(fc_vals),
-#                                         col = clust_cols, which = "column", show_legend = FALSE)
-#   clust_num_annotation <- HeatmapAnnotation(link = anno_mark(at = 1:ncol(fc_vals), labels = colnames(fc_vals), which = "column", side = "top"))
-#
-#   # The color function
-#   fc_cols <- colorRamp2(c(min(fc_vals), 0, max(fc_vals)), c("#40007F", "white",  "#FF8000"))
-#
-#   hmap <- Heatmap(fc_vals,
-#                   col = fc_cols,
-#                   cluster_columns = FALSE,
-#                   top_annotation = clust_annotation,
-#                   heatmap_legend_param = list(title = "log-FC"),
-#                   show_column_dend = FALSE,
-#                   show_column_names = FALSE,
-#                   column_title = gset,
-#                   cell_fun = function(j, i, x, y, width, height, fill){
-#                     if (p_vals[i, j] < 0.1){
-#                       grid.circle(x, y, r = unit(1, "mm"), gp = gpar(fill = "light grey"))
-#                     }
-#                   })
-#   draw(hmap)
-# }
+gene_lists <- list("immune_mediators" = c("CCL26", "IL1R2", "HRH1", "IL13RA1", "CX3CL1", "CXCL6", "IL33",
+                                          "HMGB1", "HMGB2", "S100A8", "LGALS3", "MIF", "CST1", "ANXA3",
+                                          "CXCL2", "CXCL8"),
+                   "tissue_remodelling" = c("MMP13", "MMP1", "LOXL4", "MMP7", "LOXL1", "VEGFA", "EGFR", "VCAN",
+                                            "ANGPT1", "SPDEF", "SCIN", "HAS3", "POSTN"),
+                   "barrier_function" = c("SCGB1A1", "TFF3", "SCGB2A1", "SCGB3A1", "SLC26A4", "CDH26", "ANO1", "CA2",
+                                          "GCNT4", "GALNT10", "CLCA2", "PCDH17", "OCLN", "CLDN8"),
+                   "metabolism" = c("IDO1", "SLC16A1", "SLC16A7", "ARG2", "GLUL", "TXN", "MAOA", "LTC4S",
+                                    "GSTA1", "GSTA2", "GSTA4", "SOD3", "PYCR1")
+                   )
+
+plot_clusts <- c("cluster_8", "cluster_7", "cluster_13", "cluster_12", "cluster_11")
+
+for (gset in names(gene_lists)) {
+  # Get the log-FC values for each gene in each cluster
+  fc_vals <- lapply(gene_lists[[gset]], function(gene){
+    log_fc_vals <- lapply(de_list, function(df){
+      return(df[gene, "log2FoldChange"])
+    }) %>%
+      as.data.frame(., row.names = gene) %>%
+      t() %>%
+      as.data.frame() %>%
+      rownames_to_column(var = "cluster")
+    return(log_fc_vals)
+  }) %>%
+    purrr::reduce(left_join, by= "cluster") %>%
+    column_to_rownames(var = "cluster") %>%
+    t() %>%
+    replace_na(0)
+  p_vals <- lapply(gene_lists[[gset]], function(gene){
+    log_fc_vals <- lapply(de_list, function(df){
+      return(df[gene, "padj"])
+    }) %>%
+      as.data.frame(., row.names = gene) %>%
+      t() %>%
+      as.data.frame() %>%
+      rownames_to_column(var = "cluster")
+    return(log_fc_vals)
+  }) %>%
+    purrr::reduce(left_join, by= "cluster") %>%
+    column_to_rownames(var = "cluster") %>%
+    t() %>%
+    replace_na(1)
+
+  # Remove clusters that we do not need
+  fc_vals <- fc_vals[,plot_clusts]
+  p_vals <- p_vals[,plot_clusts]
+
+  # make a list for cluster colors
+  clust_cols <-list("clust" = c("cluster_8" = "#279e68",
+                                "cluster_7" = "#aa40fc",
+                                "cluster_13" = "#e377c2",
+                                "cluster_12" = "#1f77b4",
+                                "cluster_11" = "#d62728"))
+
+  clust_annotation <- HeatmapAnnotation("names" =  anno_mark(at = 1:ncol(fc_vals),
+                                                             labels = sapply(colnames(fc_vals), function(x) strsplit(x, "_")[[1]][2]),
+                                                             which = "column", side = "top", labels_rot = 360, link_height = unit(2.5, "mm")),
+                                        "clust" = colnames(fc_vals),
+                                        col = clust_cols, which = "column", show_legend = FALSE)
+  clust_num_annotation <- HeatmapAnnotation(link = anno_mark(at = 1:ncol(fc_vals), labels = colnames(fc_vals), which = "column", side = "top"))
+
+  # The color function
+  fc_cols <- colorRamp2(c(min(fc_vals), 0, max(fc_vals)), c("#40007F", "white",  "#FF8000"))
+
+  hmap <- Heatmap(fc_vals,
+                  col = fc_cols,
+                  cluster_columns = FALSE,
+                  top_annotation = clust_annotation,
+                  heatmap_legend_param = list(title = "log-FC"),
+                  show_column_dend = FALSE,
+                  show_column_names = FALSE,
+                  column_title = gset,
+                  cell_fun = function(j, i, x, y, width, height, fill){
+                    if (p_vals[i, j] < 0.1){
+                      grid.circle(x, y, r = unit(1, "mm"), gp = gpar(fill = "light grey"))
+                    }
+                  })
+  draw(hmap)
+}
 
 ```
 
@@ -960,33 +968,33 @@ metabolism.
 
 Another notable discovery in our dataset was the presence of what looked to Hillock cells.  These cells were first
 reported by Montoro et al. Nature, 2018 in mice, but they are yet to be reported in the airway of humans.  We noticed
-cluster 9 had the major markers of these cells (KRT13, KRT4, etc.).  To test the hypothesis that these cells do in fact
+cluster 4 had the major markers of these cells (KRT13, KRT4, etc.).  To test the hypothesis that these cells do in fact
 represent what was found by Montoro et al., we too the top genes they reported as markers for these cells and created
-a gene set score.  As we expect, we see that the distibutuion of the score is much higher in cluster 9 cells vs. all
+a gene set score.  As we expect, we see that the distibutuion of the score is much higher in cluster 4 cells vs. all
 other clusters.
 
 ```{python hillock}
-# hillock_genes = ["Upk3bl", "Krt4", "S100g", "Tppp3", "Ecm1", "Lgals3", "Ly6g6c", "Anxa1", "Calml3", "Crip1", "Plac8",
-#                  "Ltf", "Krt7", "S100a6", "Upk1b", "Aqp5", "Krt15", "S100a10", "Serpinb2", "Krt13", "Pglyrp1",
-#                  "2200002D01Rik", "Anxa2", "Pmm1", "Cldn4", "Cldn3", "Mal", "Ly6a", "Tacstd2", "Pdzk1ip1", "Nupr1",
-#                  "Anxa3", "Gsto1", "Dusp1", "Krt19", "Pdlim1", "S100a11", "Gsta4", "Krt8", "Selenbp1", "Tmsb4x",
-#                  "Mgst3", "Adh7", "Tspo", "S100a14", "Capg", "Ifitm1", "Crip2", "Ffar4", "Porcn", "Cldn23", "Ndufa4",
-#                  "Cxcl17", "Igfbp5", "Cyp2b10", "Cav1", "Gprc5a", "Map1lc3a", "Aqp3"]
-#
-# # These are mouse genes, lets get the human ones
-# human_to_mouse_db = pd.read_csv("/home/nealpsmith/data/useful/human_to_mouse_genes.csv")
-#
-# human_to_mouse_dict = dict(zip(human_to_mouse_db["MGI.symbol"], human_to_mouse_db["HGNC.symbol"]))
-#
-# hillock_genes = [human_to_mouse_dict[g] for g in hillock_genes if g in human_to_mouse_dict.keys()]
-#
-# pg.calc_signature_score(epithelial_harmonized, signatures={"hillock": hillock_genes})
-#
-# sc.pl.violin(epithelial_harmonized, keys = "hillock", groupby = "new_clusters", show = False)
-# plt.xlabel("")
-# figure = plt.gcf()
-# figure.set_size_inches(6, 2)
-# plt.show()
+hillock_genes = ["Upk3bl", "Krt4", "S100g", "Tppp3", "Ecm1", "Lgals3", "Ly6g6c", "Anxa1", "Calml3", "Crip1", "Plac8",
+                 "Ltf", "Krt7", "S100a6", "Upk1b", "Aqp5", "Krt15", "S100a10", "Serpinb2", "Krt13", "Pglyrp1",
+                 "2200002D01Rik", "Anxa2", "Pmm1", "Cldn4", "Cldn3", "Mal", "Ly6a", "Tacstd2", "Pdzk1ip1", "Nupr1",
+                 "Anxa3", "Gsto1", "Dusp1", "Krt19", "Pdlim1", "S100a11", "Gsta4", "Krt8", "Selenbp1", "Tmsb4x",
+                 "Mgst3", "Adh7", "Tspo", "S100a14", "Capg", "Ifitm1", "Crip2", "Ffar4", "Porcn", "Cldn23", "Ndufa4",
+                 "Cxcl17", "Igfbp5", "Cyp2b10", "Cav1", "Gprc5a", "Map1lc3a", "Aqp3"]
+
+# These are mouse genes, lets get the human ones
+human_to_mouse_db = pd.read_csv("/home/nealpsmith/data/useful/human_to_mouse_genes.csv")
+
+human_to_mouse_dict = dict(zip(human_to_mouse_db["MGI.symbol"], human_to_mouse_db["HGNC.symbol"]))
+
+hillock_genes = [human_to_mouse_dict[g] for g in hillock_genes if g in human_to_mouse_dict.keys()]
+
+pg.calc_signature_score(epithelial_harmonized, signatures={"hillock": hillock_genes})
+
+sc.pl.violin(epithelial_harmonized, keys = "hillock", groupby = "new_clusters", show = False)
+plt.xlabel("")
+figure = plt.gcf()
+figure.set_size_inches(6, 2)
+plt.show()
 ```
 
 Given Hillock cells represent a novel cell type in humans, we wanted to perform general differential expression
@@ -1046,6 +1054,7 @@ all_cell_info = all_cell_info.obs
 
 ```
 
+
 ```{r stacked_bars, fig.width = 12, fig.height = 4}
 
 cols <- c("Early ciliated" = "#ffbb78",
@@ -1098,6 +1107,9 @@ ggplot(plot_df, aes(x = sample, fill = annotation, y = perc_cells)) + geom_bar(s
 
 ```
 
+
+Below, we are looking at the distributions of percents and total number of AECs for our disease groups.  The percents
+represent the percent of each AEC subcluster as a function of all AECs.
 
 ```{r perc_plots, fig.width = 12, fig.height = 6}
 
@@ -1214,67 +1226,6 @@ get_abund_info <- function(dataset, cluster, contrast, random_effects = NULL, fi
   return(cluster_models)
 }
 
-# A function to make a forest plot for the differential abundance analyses
-# plot_contrasts <- function(d, x_breaks_by = 1, wrap_ncol = 6, y_ord = FALSE) {
-#   # if (y_ord != FALSE){
-#   #   d$cluster <- factor(d$cluster, levels = y_ord)
-#   # }
-#   ggplot() +
-#     annotate(
-#       geom = "rect",
-#       xmin = -Inf,
-#       xmax = Inf,
-#       ymin = seq(from = 1, to = length(unique(d$cluster)), by = 2) - 0.5,
-#       ymax = seq(from = 1, to = length(unique(d$cluster)), by = 2) + 0.5,
-#       alpha = 0.2
-#     ) +
-#     geom_vline(xintercept = 0, size = 0.2) +
-#     geom_errorbarh(
-#       data = d,
-#       mapping = aes(
-#         xmin = asymp.LCL, xmax = asymp.UCL, y = cluster,
-#         color = sig
-#       ),
-#       height = 0
-#     ) +
-#     geom_point(
-#       data = d,
-#       mapping = aes(
-#         x = estimate, y = cluster,
-#         color = sig
-#       ),
-#       size = 3
-#     ) +
-#     scale_color_manual(
-#       name = "P < 0.05",
-#       values = c("#FF8000", "#40007F", "grey60"),
-#       breaks = c("AA", "ANA")
-#     ) +
-#     scale_x_continuous(
-#       breaks = log(c(0.125, 0.5, 1, 2, 4)),
-#       labels = function(x) exp(x)
-#     ) +
-#     scale_y_discrete(
-#       # expand = c(0, 0),
-#       # breaks = seq(1, length(unique(d$cluster))),
-#       labels = levels(plot_df$cluster),
-#     ) +
-#     # annotation_logticks(sides = "b") +
-#     expand_limits(y = c(0.5, length(unique(d$cluster)) + 0.5)) +
-#     # facet_grid(~ GeneName) +
-#     facet_wrap(~ sample, ncol = wrap_ncol) +
-#     theme_classic() +
-#     theme(
-#       strip.text = element_text(face = "italic"),
-#       text = element_text(size = 15)
-#     ) +
-#     labs(
-#       title = "contrasts by sample",
-#       x = "Odds Ratio",
-#       y = "cluster"
-#     )
-# }
-
 clust_df <- reticulate::py$cell_info
 
 abund_info <- get_abund_info(clust_df, cluster = clust_df$new_clusters,
@@ -1283,7 +1234,7 @@ abund_info <- get_abund_info(clust_df, cluster = clust_df$new_clusters,
                             fixed_effects = c("sample", "phenotype"))
 
 plot_df <- do.call(rbind, abund_info)
-plot_df$direction <- ifelse(plot_df$estimate > 0, "AA", "ANA")
+plot_df$direction <- ifelse(plot_df$estimate > 0, "AA", "AC")
 
 plot_df$cluster <- as.numeric(gsub("cluster", "", plot_df$cluster))
 plot_df$cluster <- factor(plot_df$cluster)
@@ -1305,7 +1256,6 @@ plot_df$annotation <- factor(plot_df$annotation, levels = rev(c("Early ciliated"
                                                             "Hillock", "Deuterosomal", "Cycling basal", "Basal",
                                                             "Suprabasal", "quiesBasal", "Ionocyte", "Goblet",
                                                                 "quiesGoblet", "Club")))
-print(unique(plot_df$annotation))
 
 ggplot(plot_df[plot_df$sample != "Dil",], aes(x = estimate, y = annotation, color = sig)) +
   geom_point(size = 3) +
